# insurance-nflow

./: README.md  pyproject.toml
notebooks/: 01_motor_bi_severity_demo.py
src/insurance_nflow/: __init__.py  actuarial.py  data.py  diagnostics.py  flows.py  severity.py  tail.py
tests/: conftest.py  test_actuarial.py  test_data.py  test_diagnostics.py  test_flows.py  test_severity.py  test_tail.py
