[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-nflow"
version = "0.1.0"
description = "Normalizing flows for insurance severity distribution modelling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Burning Cost", email = "pricing.frontier@gmail.com"},
]
keywords = ["insurance", "normalizing-flows", "severity", "actuarial", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "zuko>=1.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_nflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
